Fix editor alignment styles for Hero block
Editor markup changes between classic and FSE

--- a/private/src/styles/blocks/hero/_editor.scss
+++ b/private/src/styles/blocks/hero/_editor.scss
@@ -43,34 +43,41 @@
   position: absolute;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align] {
+[data-type="amnesty-core/hero"] .wp-block[data-align],
+.wp-block[data-align] .wp-block-amnesty-core-hero {
   height: auto;
   min-height: 540px;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="left"] .container {
+[data-type="amnesty-core/hero"] .wp-block[data-align="left"] .container,
+.wp-block[data-align="left"] .wp-block-amnesty-core-hero .container {
   justify-content: start;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="left"] .hero-contentWrapper {
+[data-type="amnesty-core/hero"] .wp-block[data-align="left"] .hero-contentWrapper,
+.wp-block[data-align="left"] .wp-block-amnesty-core-hero .hero-contentWrapper {
   align-items: start;
   text-align: start;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="center"] .container {
+[data-type="amnesty-core/hero"] .wp-block[data-align="center"] .container,
+.wp-block[data-align="center"] .wp-block-amnesty-core-hero .container {
   justify-content: center;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="center"] .hero-contentWrapper {
+[data-type="amnesty-core/hero"] .wp-block[data-align="center"] .hero-contentWrapper,
+.wp-block[data-align="center"] .wp-block-amnesty-core-hero .hero-contentWrapper {
   align-items: center;
   text-align: center;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="right"] .container {
+[data-type="amnesty-core/hero"] .wp-block[data-align="right"] .container,
+.wp-block[data-align="right"] .wp-block-amnesty-core-hero .container {
   justify-content: end;
 }
 
-[data-type="amnesty-core/hero"] .wp-block[data-align="right"] .hero-contentWrapper {
+[data-type="amnesty-core/hero"] .wp-block[data-align="right"] .hero-contentWrapper,
+.wp-block[data-align="right"] .wp-block-amnesty-core-hero .hero-contentWrapper {
   align-items: end;
   text-align: end;
 }
